--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <p>
     I’m an artist and game creator with a long history of designing and bringing
     characters, worlds, and ideas to life for video games and beyond.
+    <p>
+I’m perhaps best known for my work on <strong>:contentReference[oaicite:0]{index=0}</strong> and other classic video games,
+where I helped create and define characters that went on to become part of gaming history.
+My work spans character design, animation, and visual development across both games and traditional art.
+</p>
+
     Alongside my work in games, I create original traditional artwork,
     including paintings and one-off commissions.
   </p>
