--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     I’m an artist and game creator with a long history of designing and bringing
     characters, worlds, and ideas to life for video games and beyond.
     <p>
-I’m perhaps best known for my work on <strong>:contentReference[oaicite:0]{index=0}</strong> and other classic video games,
+I’m perhaps best known for my work on DONKEY KONG COUNTRY  and other classic video games,
 where I helped create and define characters that went on to become part of gaming history.
 My work spans character design, animation, and visual development across both games and traditional art.
 </p>
