--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 0 20px; line-height: 1.6;">
+
+  <img src="images/kev-bayliss-art-banner.jpg"
+     alt="Kev Bayliss Art – Polygons, Pixels & Paint since 1987"
+     style="max-width:100%; height:auto; display:block; margin-bottom:40px;">
+
   <h1>Kev Bayliss</h1>
   <p><strong>Artist & Game Creator</strong></p>
 
