--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body style="font-family: Arial, sans-serif; max-width: 900px; margin: 40px auto; padding: 0 20px; line-height: 1.6;">
+<body style="font-family: Arial, sans-serif; max-width: 960px; margin: 60px auto; padding: 0 24px; line-height: 1.6; background:#ffffff;">
+
 
   <img src="images/kev-bayliss-art-banner.jpg"
      alt="Kev Bayliss Art – Polygons, Pixels & Paint since 1987"
