Switched for new fresher logo -white outline and tweaks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
   <img src="KevBayliss.github.io
-/KevBaylissArt_Banner_1920.jpg"
+/KevBaylissArt_Banner_1920.png"
      alt="Kev Bayliss Art – Polygons, Pixels & Paint since 1987"
      style="max-width:100%; height:auto; display:block; margin-bottom:40px;">
 
