--- a/index.html
+++ b/index.html
@@ -1,48 +1,245 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Kev Bayliss – Art & Commissions</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Kev Bayliss — Artist & Game Creator. Original paintings, commissions, and live art on Twitch." />
+  <title>Kev Bayliss Art</title>
+
+  <style>
+    :root{
+      --bg:#ffffff;
+      --text:#111111;
+      --muted:#444444;
+      --rule:#e6e6e6;
+      --max:980px;
+      --radius:18px;
+    }
+
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.55;
+    }
+
+    a{ color: inherit; text-decoration: none; }
+    a:hover{ text-decoration: underline; }
+
+    .wrap{
+      max-width: var(--max);
+      margin: 0 auto;
+      padding: 28px 18px 48px;
+    }
+
+    .hero{
+      border-radius: var(--radius);
+      overflow: hidden;
+      border: 1px solid var(--rule);
+      background: #f7f7f7;
+    }
+    .hero img{
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .section{
+      padding: 22px 4px;
+      border-bottom: 1px solid var(--rule);
+    }
+    .section:last-of-type{ border-bottom: none; }
+
+    h1{
+      font-size: clamp(26px, 3vw, 34px);
+      margin: 0 0 10px 0;
+      letter-spacing: -0.02em;
+    }
+    h2{
+      font-size: 18px;
+      margin: 0 0 10px 0;
+      letter-spacing: -0.01em;
+    }
+    p{ margin: 0 0 12px 0; color: var(--muted); }
+    .lead{ color: var(--text); }
+
+    .email{
+      font-weight: 700;
+      font-size: 18px;
+      display: inline-block;
+      padding: 10px 14px;
+      border: 1px solid var(--rule);
+      border-radius: 999px;
+      background: #fff;
+    }
+    .email:hover{ text-decoration: none; border-color: #cfcfcf; }
+
+    .cta{
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px 14px;
+      border: 1px solid var(--rule);
+      border-radius: 999px;
+      background: #fff;
+      font-weight: 600;
+    }
+    .cta:hover{ text-decoration: none; border-color: #cfcfcf; }
+
+    .icons{
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 8px;
+    }
+    .icon-btn{
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      padding: 10px 12px;
+      border: 1px solid var(--rule);
+      border-radius: 999px;
+      background: #fff;
+      font-weight: 600;
+    }
+    .icon-btn:hover{ text-decoration: none; border-color:#cfcfcf; }
+    .icon{
+      width: 18px;
+      height: 18px;
+      display: inline-block;
+    }
+    .small{
+      font-size: 13px;
+      color: var(--muted);
+      margin-top: 6px;
+    }
+
+    footer{
+      margin-top: 26px;
+      padding-top: 18px;
+      border-top: 1px solid var(--rule);
+      color: var(--muted);
+      font-size: 13px;
+    }
+  </style>
 </head>
 
-<body style="font-family: Arial, sans-serif; max-width: 960px; margin: 60px auto; padding: 0 24px; line-height: 1.6; background:#ffffff;">
+<body>
+  <main class="wrap">
 
+    <!-- 1) HERO / BANNER -->
+    <section class="hero" aria-label="Banner">
+      <!-- Put your banner image in the repo (same folder as index.html) and name it accordingly -->
+      <img src="KevBaylissArt_Banner_FINAL.jpg" alt="Kev Bayliss Art banner" />
+    </section>
 
-  <img src="KevBayliss.github.io
-/KevBaylissArt_Banner_1920.png"
-     alt="Kev Bayliss Art – Polygons, Pixels & Paint since 1987"
-     style="max-width:100%; height:auto; display:block; margin-bottom:40px;">
+    <!-- 2) SHORT BIO -->
+    <section class="section" id="about">
+      <h1>Kev Bayliss — Artist &amp; Game Creator</h1>
 
-  <h1>Kev Bayliss</h1>
-  <p><strong>Artist & Game Creator</strong></p>
+      <p class="lead">
+        I’m a British artist and game creator with a career spanning traditional painting, character design,
+        and video game development. I began my professional journey in the late 1980s, contributing to some
+        of the most recognisable games of the 16-bit and early 3D era, and I continue to create new work today.
+      </p>
 
-  <p>
-    I’m an artist and game creator with a long history of designing and bringing
-    characters, worlds, and ideas to life for video games and beyond.
-    <p>
-I’m perhaps best known for my work on DONKEY KONG COUNTRY  and other classic video games,
-where I helped create and define characters that went on to become part of gaming history.
-My work spans character design, animation, and visual development across both games and traditional art.
-</p>
+      <p>
+        My current focus is original paintings, game-inspired artwork, and commissioned pieces, blending
+        hand-painted techniques with decades of experience in digital art and character creation.
+      </p>
 
-    Alongside my work in games, I create original traditional artwork,
-    including paintings and one-off commissions.
-  </p>
+      <p>
+        I regularly paint live on Twitch, sharing my process, techniques, and stories from a lifetime in game development.
+      </p>
+    </section>
 
-  <p>
-    My focus is on character, personality, and storytelling — whether that’s through
-    digital creation or paint on canvas.
-  </p>
+    <!-- 3) COMMISSIONS & ENQUIRIES -->
+    <section class="section" id="commissions">
+      <h2>Commissions &amp; Enquiries</h2>
 
-  <p>
-    Selected original artworks are available to buy online.
-  </p>
+      <p>
+        I’m available for a limited number of commissions, including original paintings and bespoke artwork
+        inspired by games, characters, and creative themes.
+      </p>
 
-  <p>
-    For enquiries, commissions, or general questions, you can contact me at:
-    <br>
-    <a href="mailto:KevBaylissArt@Outlook.com">KevBaylissArt@Outlook.com</a>
-  </p>
+      <p>If you’d like to discuss an idea, please get in touch by email:</p>
+
+      <p>
+        <a class="email" href="mailto:KevBaylissArt@Outlook.com">KevBaylissArt@Outlook.com</a>
+      </p>
+    </section>
+
+    <!-- 4) AVAILABLE WORKS (eBay) -->
+    <section class="section" id="available-works">
+      <h2>Available Works</h2>
+
+      <p>
+        A selection of original, one-of-a-kind artworks is available to purchase via my eBay page.
+      </p>
+
+      <!-- Replace with your actual eBay URL -->
+      <p>
+        <a class="cta" href="https://www.ebay.co.uk/usr/YOUR_EBAY_USERNAME" target="_blank" rel="noopener noreferrer">
+          View available works on eBay
+          <span aria-hidden="true">↗</span>
+        </a>
+      </p>
+
+      <p class="small">Tip: Keep “Available works” wording (calm, not salesy) — it fits your site tone.</p>
+    </section>
+
+    <!-- 5) SOCIAL LINKS WITH ICONS -->
+    <section class="section" id="socials">
+      <h2>Elsewhere online</h2>
+
+      <div class="icons">
+        <!-- Twitch -->
+        <a class="icon-btn" href="https://twitch.tv/YOUR_CHANNEL" target="_blank" rel="noopener noreferrer">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor" d="M4 3h18v12l-5 5h-5l-3 3H6v-3H4V3zm2 2v14h3v2l2-2h6l4-4V5H6zm10 3h2v6h-2V8zm-5 0h2v6h-2V8z"/>
+          </svg>
+          Twitch
+        </a>
+
+        <!-- Instagram -->
+        <a class="icon-btn" href="https://instagram.com/YOUR_HANDLE" target="_blank" rel="noopener noreferrer">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-5 4a5 5 0 1 1 0 10a5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6a3 3 0 0 0 0-6zm5.5-.8a1.1 1.1 0 1 1-2.2 0a1.1 1.1 0 0 1 2.2 0z"/>
+          </svg>
+          Instagram
+        </a>
+
+        <!-- X / Twitter -->
+        <a class="icon-btn" href="https://x.com/YOUR_HANDLE" target="_blank" rel="noopener noreferrer">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor" d="M18.9 2H22l-6.8 7.8L23 22h-6.7l-5.2-6.7L5.3 22H2l7.3-8.4L1.6 2H8.5l4.7 6.1L18.9 2zm-1.2 18h1.8L7.4 4H5.5l12.2 16z"/>
+          </svg>
+          X (Twitter)
+        </a>
+
+        <!-- LinkedIn (optional) -->
+        <a class="icon-btn" href="https://www.linkedin.com/in/YOUR_PROFILE" target="_blank" rel="noopener noreferrer">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor" d="M4 3a2 2 0 1 1 0 4a2 2 0 0 1 0-4zm-1 6h3v12H3V9zm7 0h3v2c.5-1.1 2-2.3 4.1-2.3C20.4 8.7 22 10.4 22 14v7h-3v-6.3c0-2.1-.7-3.5-2.5-3.5c-1.4 0-2.2.9-2.6 1.8c-.1.3-.1.7-.1 1.1V21h-3V9z"/>
+          </svg>
+          LinkedIn
+        </a>
+      </div>
+
+      <p class="small">If you prefer icons only, remove the text labels (“Twitch”, “Instagram”, etc.).</p>
+    </section>
+
+    <footer>
+      © <span id="year"></span> Kev Bayliss. All rights reserved.
+    </footer>
+
+  </main>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
