added all the new stuff from chat

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
     <!-- 1) HERO / BANNER -->
     <section class="hero" aria-label="Banner">
       <!-- Put your banner image in the repo (same folder as index.html) and name it accordingly -->
-      <img src="KevBaylissArt_Banner_FINAL.jpg" alt="Kev Bayliss Art banner" />
+      <img src="KevBayliss.github.io
+/KevBaylissArt_Banner_1920.png" alt="Kev Bayliss Art banner" />
     </section>
 
     <!-- 2) SHORT BIO -->
