--- a/index.html
+++ b/index.html
@@ -114,4 +114,103 @@
       justify-content: center;
       border: 1px solid var(--rule);
       border-radius: 999px;
-      backgrou
+      background: #ffffff;
+      transition: transform 0.1s ease, border-color 0.1s ease;
+    }
+
+    .icon-btn:hover{
+      transform: translateY(-1px);
+      border-color: #cfcfcf;
+      text-decoration: none;
+    }
+
+    .icon{
+      width: 20px;
+      height: 20px;
+      fill: currentColor;
+    }
+
+    footer{
+      margin-top: 26px;
+      padding-top: 18px;
+      border-top: 1px solid var(--rule);
+      color: var(--muted);
+      font-size: 13px;
+    }
+  </style>
+</head>
+
+<body>
+  <main class="wrap">
+
+    <!-- HERO -->
+    <section class="hero">
+      <img src="/KevBaylissArt_Banner_1920.png" alt="Kev Bayliss Art banner" />
+    </section>
+
+    <!-- BIO -->
+    <section class="section">
+      <h1>Kev Bayliss — Artist &amp; Game Creator</h1>
+
+      <p class="lead">
+        I’m a British artist and game creator with a career spanning traditional painting,
+        character design, and video game development. I began my professional journey in
+        the late 1980s, contributing to some of the most recognisable games of the 16-bit
+        and early 3D era, and I continue to create new work today.
+      </p>
+
+      <p>
+        My current focus is original paintings, game-inspired artwork, and commissioned pieces,
+        blending hand-painted techniques with decades of experience in digital art and character creation.
+      </p>
+
+      <p>
+        I regularly paint live on Twitch, sharing my process, techniques, and stories from a lifetime
+        in game development.
+      </p>
+    </section>
+
+    <!-- COMMISSIONS -->
+    <section class="section">
+      <h2>Commissions &amp; Enquiries</h2>
+
+      <p>
+        I’m available for a limited number of commissions, including original paintings
+        and bespoke artwork inspired by games, characters, and creative themes.
+      </p>
+
+      <div class="btn-row">
+        <a class="btn btn-red" href="mailto:KevBaylissArt@Outlook.com">
+          Email me about commissions
+        </a>
+      </div>
+    </section>
+
+    <!-- EBAY -->
+    <section class="section">
+      <h2>Available Works</h2>
+
+      <p>
+        A selection of original, one-of-a-kind artworks is available to purchase via my eBay page.
+      </p>
+
+      <div class="btn-row">
+        <a class="btn btn-blue"
+           href="https://www.ebay.co.uk/usr/YOUR_EBAY_USERNAME"
+           target="_blank" rel="noopener noreferrer">
+          View existing works on my eBay
+        </a>
+      </div>
+    </section>
+
+    <!-- TWITCH (directly under eBay) -->
+    <section class="section">
+      <h2>Live on Twitch</h2>
+
+      <p>
+        I regularly stream live on Twitch — painting, playing games, and talking through art techniques
+        and stories from a lifetime in game development.
+      </p>
+
+      <div class="btn-row">
+        <
