--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         }
 
         .button {
-            background-color: #e60000; /* Red for email */
             color: white;
             padding: 10px 20px;
             border: none;
@@ -41,8 +40,16 @@
             margin: 10px 5px;
         }
 
+        .button-red {
+            background-color: #e60000; /* Red for email */
+        }
+
+        .button-green {
+            background-color: #00cc00; /* Green for eBay */
+        }
+
         .button-blue {
-            background-color: #007bff; /* Blue for eBay and Twitch */
+            background-color: #007bff; /* Blue for Twitch */
         }
 
         .button-twitch {
@@ -68,10 +75,6 @@
             color: #fff;
         }
 
-        footer .social-icons a {
-            color: #fff;
-        }
-
     </style>
 </head>
 <body>
@@ -84,9 +87,14 @@
     <h1>Welcome to Kev Bayliss Art</h1>
     <p>Explore my art, commissions, and more.</p>
 
-    <a href="mailto:KevBaylissArt@Outlook.com" class="button">Email for Commissions</a>
-    <a href="https://www.ebay.co.uk/usr/KevBaylissArt" class="button button-blue">View Existing Works on eBay</a>
-    <a href="https://www.twitch.tv/KevBaylissArt" class="button button-twitch">Watch Me Paint / Play LIVE on Twitch</a>
+    <a href="mailto:KevBaylissArt@Outlook.com" class="button button-red">Email for Commissions</a>
+    <a href="https://www.ebay.co.uk/usr/KevBaylissArt" class="button button-green">View Existing Works on eBay</a>
+    <a href="https://www.twitch.tv/KevBaylissArt" class="button button-blue">Watch Me Paint / Play LIVE on Twitch</a>
+</section>
+
+<section>
+    <h2>About Me</h2>
+    <p>I have been an artist in the video game industry since 1987, working on iconic titles and creating characters that have become a part of video game history. I offer commissioned artwork and also sell original works on eBay. Follow my journey on social media and watch me live on Twitch where I create art in real-time.</p>
 </section>
 
 <section>
@@ -100,11 +108,6 @@
 
 <footer>
     <p>&copy; 2025 Kev Bayliss Art. All rights reserved.</p>
-    <div class="social-icons">
-        <a href="https://twitter.com/KevBaylissArt" target="_blank">Twitter</a> | 
-        <a href="https://www.instagram.com/KevBaylissArt" target="_blank">Instagram</a> | 
-        <a href="https://www.facebook.com/KevBaylissArt" target="_blank">Facebook</a>
-    </div>
 </footer>
 
 </body>
