--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            max-width: 1200px; /* Limit the width */
+            margin-left: auto;
+            margin-right: auto;
         }
 
         header {
@@ -21,6 +24,7 @@
 
         .banner {
             width: 100%;
+            max-width: 1200px; /* Ensure the banner doesn't stretch beyond this width */
             height: auto;
         }
 
@@ -125,9 +129,4 @@
     </div>
 </section>
 
-<footer>
-    <p>&copy; 2025 Kev Bayliss Art. All rights reserved.</p>
-</footer>
-
-</body>
-</html>
+<f
