--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <p>Explore my art, commissions, and more.</p>
 
     <a href="mailto:KevBaylissArt@Outlook.com" class="button button-red">Email for Commissions</a>
-    <a href="https://www.ebay.co.uk/usr/KevBaylissArt" class="button button-green">View Existing Works on eBay</a>
-    <a href="https://www.twitch.tv/KevBaylissArt" class="button button-blue">Watch Me Paint / Play LIVE on Twitch</a>
+    <a href="https://www.ebay.co.uk/usr/kev_bayliss_art" class="button button-green">View Existing Works on eBay</a>
+    <a href="https://www.twitch.tv/Kev_Bayliss" class="button button-blue">Watch Me Paint / Play LIVE on Twitch</a>
 </section>
 
 <section class="about-me">
@@ -123,9 +123,9 @@
 <section>
     <h2>Follow Me on Social Media</h2>
     <div class="social-icons">
-        <a href="https://twitter.com/KevBaylissArt" target="_blank">Twitter</a>
+        <a href="https://x.com/Kev_Bayliss" target="_blank">'X'</a>
         <a href="https://www.instagram.com/KevBaylissArt" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/KevBaylissArt" target="_blank">Facebook</a>
+        <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank">BlueSky</a>
     </div>
 </section>
 
