--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <a href="mailto:KevBaylissArt@Outlook.com" class="button button-red">Email for Commissions</a>
     <a href="https://www.ebay.co.uk/usr/kev_bayliss_art" class="button button-green">View Existing Works on eBay</a>
-    <a href="https://www.twitch.tv/Kev_Bayliss" class="button button-blue">Watch Me Paint / Play LIVE on Twitch</a>
+    <a href="https://www.twitch.tv/kev_bayliss" class="button button-blue">Watch Me Paint / Play LIVE on Twitch</a>
 </section>
 
 <section class="about-me">
