--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <a href="https://x.com/Kev_Bayliss" target="_blank">'X'</a>
         <a href="https://www.instagram.com/KevBaylissArt" target="_blank">Instagram</a>
         <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank">BlueSky</a>
+        <a href="https://www.linkedin.com/in/kevbayliss/" target="_blank">LinkedIn</a>
     </div>
 </section>
 
