--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <h2>Follow Me on Social Media</h2>
     <div class="social-icons">
         <a href="https://x.com/Kev_Bayliss" target="_blank">'X'</a>
-        <a href="https://www.instagram.com/KevBaylissArt" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/kev_bayliss/" target="_blank">Instagram</a>
         <a href="https://bsky.app/profile/kevbayliss.bsky.social" target="_blank">BlueSky</a>
         <a href="https://www.linkedin.com/in/kevbayliss/" target="_blank">LinkedIn</a>
     </div>
