--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
             font-size: 13px;
         }
 
-        /* Profile image */
+        /KevBayliss.github.io
+/KevBaylissArt_ProfilePic.png/
         .profile-img {
             width: 100px;
             height: 100px;
