--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
             font-size: 13px;
         }
 
-        /KevBayliss.github.io
-/KevBaylissArt_ProfilePic.png/
+        /* Profile image */
         .profile-img {
             width: 100px;
             height: 100px;
