--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 </section>
 
 <section class="about-me">
-    <img class="profile-img" src="/your-profile-picture.jpg" alt="Kev Bayliss Profile Picture">
+    <img class="profile-img" src="KevBayliss.github.io
+/KevBaylissArt_ProfilePic.png" alt="Kev Bayliss Profile Picture">
     <div class="about-me-text">
         <h2>About Me</h2>
         <p>I have been an artist in the video game industry since 1987, working on iconic titles and creating characters that have become a part of video game history. I offer commissioned artwork and also sell original works on eBay. Follow my journey on social media and watch me live on Twitch where I create art in real-time.</p>
